# human-eval-infilling

./: .gitignore  pyproject.toml  setup.py
experiments/: explore.ipynb
human_eval_infilling/: data.py  evaluate_functional_correctness.py  evaluation.py  execution.py  generate_samples.py  jsonl_to_csv.py
