[project]
name = "human-eval-infilling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fire>=0.7.0", "numpy>=2.1.3", "tqdm>=4.67.1"]

[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "human_eval_infilling*",
] # package names should match these glob patterns

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
